--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Basic ExpressJS based template for static websites.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
